--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="text">
+    <div id="body">
         
     </div>
     <script src="./app.js"></script>
