--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="body">
-        
+    <h1 class="heading">This is heading</h1>
+    <h1 class="heading">This is heading</h1>
+    <div class="box">
+        <h2 class="heading-2">This is heading 2</h2>
     </div>
+
+    <form action="" id="form-1"></form>
+    <form action="" id="form-2"></form>
     <script src="./app.js"></script>
 </body>
 </html>
