update more notes

--- a/index.html
+++ b/index.html
@@ -7,14 +7,32 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="heading">This is heading</h1>
+
+    <form action="" style="width: 300px; height: 100px; border: 1px solid black;">
+        <p>$<span id="price">0</span></p>
+        <label for="quantity">quantity</label>
+        <input type="number" name="quantity" id="quantity">
+    </form>
+
+
+
+    <!-- <div class="box red" ondrag="console.log(Math.random());">
+        <h1 title="Heading">New heading</h1>
+    </div> -->
+    <!-- <h1 class="heading">This is heading</h1>
     <h1 class="heading">This is heading</h1>
     <div class="box">
         <h2 class="heading-2">This is heading 2</h2>
     </div>
 
+    <a href="" class="anchor">this is a link</a>
+    <a href="" class="anchor">this is a link</a>
+    <a href="" class="anchor">this is a link</a>
+    <a href="" class="anchor">this is a link</a>
+
+
     <form action="" id="form-1"></form>
-    <form action="" id="form-2"></form>
+    <form action="" id="form-2"></form> -->
     <script src="./app.js"></script>
 </body>
 </html>
